tests/generics/gentle/shouldfail/004-shouldcast-shouldfail.ooc

f := func <T> (t: T) { printf("%d\n", t as Int) } as Func <T> (t: T)
f(42)
